# ChangeLog for dev-lang/ruby
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.340 2008/07/15 18:07:15 graaff Exp $

  06 Feb 2009; Alex Legler <a3li@gentoo.org> ruby-1.9.1.ebuild:
  Fix the once more moved gem dir

  01 Feb 2009; Alex Legler <a3li@gentoo.org> +ruby-1.9.1.ebuild:
  Version bump

  22 Jan 2009; Alex Legler <a3li@gentoo.org>
  -files/ruby-1.8.6-memory-leak.diff, -files/ruby-1.8.6-revert-r15856.patch:
  Removing old patches

  22 Jan 2009; Alex Legler <a3li@gentoo.org> ChangeLog:
  Version bump and unifying patches

  30 Dec 2008; Alex Legler <a3li@gentoo.org>
  +files/ruby-1.9.1_rc1-rubygems-gentoo.patch,
  +files/ruby-1.9.1_rc1-rubygems-proxy.patch, +ruby-1.9.1_rc1.ebuild:
  Version bump

  25 Dec 2008; Alex Legler <a3li@gentoo.org> ruby-1.9.1_pre2-r1.ebuild:
  Fixed sandbox violation when installing with USE="doc". Thanks to
  schroedinbug from #g-ruby for reporting.

  17 Dec 2008; Mark Somerville <gentoo-ruby@scottishclimbs.com> +ruby-1.9.1_pre2-r1.ebuild:
  Removed -j1 from 1.9.1_pre2 since it seems to build without this
  restriction now.

  01 Dec 2008; Alex Legler <a3li@gentoo.org>
  +files/ruby-1.9.1_pre2-rubygems-gentoo.patch,
  +files/ruby-1.9.1_pre2-rubygems-proxy.patch, +ruby-1.9.1_pre2.ebuild:
  Version bump

  02 Nov 2008; Alex Legler <a3li@gentoo.org> ruby-1.9.1_pre1.ebuild:
  Directory structure changed, fixing rubygems inital sandbox breakage

  28 Oct 2008; Alex Legler <a3li@gentoo.org>
  -files/ruby-1.9.1_rc1-rubygems-gentoo.patch,
  -files/ruby-1.9.1_rc1-rubygems-proxy.patch, ++, ++, ++,
  -ruby-1.9.1_rc1.ebuild:
  Changed _rc1->_pre1

  28 Oct 2008; Alex Legler <a3li@gentoo.org>
  +files/ruby-1.9.1_rc1-rubygems-gentoo.patch,
  +files/ruby-1.9.1_rc1-rubygems-proxy.patch, +ruby-1.9.1_rc1.ebuild:
  Version bump

  06 Oct 2008; Alex Legler <a3li@gentoo.org>
  +files/ruby-1.9.0.5-rubygems-gentoo.patch, ruby-1.9.0.5.ebuild: