@@ -1,0 +1,10 @@
+# DO NOT USE THIS FILE!
+# ---------------------
+# This file is a placebo for Ruby 1.9 to work with a legacy feature, Gentoo
+# added to Ruby 1.8 and earlier, loading rubygems automatically (auto_gem).
+# It is no longer needed, but ruby19 needs this file to operate properly on
+# a system containing older versions of Ruby and thus the legacy feature.
+#
+# REMOVAL NOTE:
+# You may remove this file if you are running a Ruby >=1.9.1 *only* system
+# or have disabled the Gentoo auto_gem.rb/RUBYOPT=auto_gem magic.
