@@ -2,6 +2,12 @@
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.340 2008/07/15 18:07:15 graaff Exp $
 
+  21 Feb 2009; Alex Legler <a3li@gentoo.org> +files/auto_gem.rb,
+  ruby-1.9.1.ebuild:
+  Removing site_ruby override to support the new gem load path. This
+  separates the ruby18 and ruby19 site_dirs. To fix the resulting
+  auto_gem.rb breakage, now shipping a placebo file. Minor cleanup
+
   06 Feb 2009; Alex Legler <a3li@gentoo.org> ruby-1.9.1.ebuild:
   Fix the once more moved gem dir
 
